[tool.poetry]
name = "mit-course-dependencies"
version = "0.1.0"
description = ""
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]
readme = "README.md"
packages = [{include = "mit_course_dependencies"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
networkx = "^3.0"
matplotlib = "^3.7.1"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
